alignment fix

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -107,7 +107,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
   margin-bottom: 15px;
   opacity: 0.8;
-  justify-content: center;
+  text-align: center;
 }
 
 .server-stats {
